# big_house_plan

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.yaml  portfolio.py  pyproject.toml  requirements.txt  schema.sql
.serena/: project.yml
.serena/memories/: 01_critical_principles.md  02_system_architecture.md  03_api_reference.md  04_frontend_reference.md  05_business_domains.md  06_development_status.md  architecture_principles.md  backend_api_and_services_overview.md  enhanced_cost_calculation_system.md  frontend_components_mapping.md  frontend_pages_mapping.md  k_line_chart_refactoring.md  project_overview.md  testing_principles.md  zig_signal_tdx_reference_data.md
backend/: api.py  db.py  logs.py  services.py
backend/domain/: __init__.py  txn_engine.py
backend/migrations/: add_signal_scope.py
backend/providers/: __init__.py  tushare_provider.py
backend/repository/: __init__.py  instrument_repo.py  portfolio_repo.py  position_repo.py  price_repo.py  reporting_repo.py  signal_repo.py  txn_repo.py  watchlist_repo.py
backend/routes/: __init__.py  aggregated.py  analytics.py  base.py  dashboard.py  logs.py  maintenance.py  positions.py  pricing.py  reference_data.py  reports.py  settings.py  signals.py  transactions.py  watchlist.py
backend/scripts/: backfill_daily.py  reset_master_from_seeds.py
backend/services/: aggregator_svc.py  analytics_svc.py  calc_svc.py  category_svc.py  config_svc.py  fund_svc.py  (+11 more)
frontend/: TESTING.md  package-lock.json  package.json  tsconfig.json
scripts/: dev-fast.sh  dev.sh
seeds/: categories.csv  instruments.csv
(+73 files in other folders)
